Enable sim lock under Sim Settings
hopefully it enable the check box :p :p

--- a/res/xml/sim_lock_settings.xml
+++ b/res/xml/sim_lock_settings.xml
@@ -21,7 +21,7 @@
     <CheckBoxPreference
             android:key="sim_toggle"
             android:title="@string/sim_pin_toggle"
-            android:persistent="false"
+            android:persistent="true"
             android:summaryOn="@string/sim_lock_on"
             android:summaryOff="@string/sim_lock_off"/>
 
